Overrode max-width to prevent bleeding

--- a/src/component/CulturePage/BelongHere/style.css
+++ b/src/component/CulturePage/BelongHere/style.css
@@ -56,6 +56,8 @@
 
 #belong-here-container {
   height: 800px;
+  width: 1500px;
+  max-width: none;
   display: flex;
   flex-direction: column;
   position: relative;
